compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__signature_help__help_shows_documentation_for_local_function.snap
---
source: compiler-core/src/language_server/tests/signature_help.rs
expression: "\n/// Some doc!\npub fn wibble(a: Int, b: String) { 1.0 }\n\npub fn main() {\n  wibble()\n}\n"
---
/// Some doc!
pub fn wibble(a: Int, b: String) { 1.0 }

pub fn main() {
  wibble()
         ↑
}


----- Signature help -----
wibble(Int, String) -> Float
       ▔▔▔

Documentation:
MarkupContent(
    MarkupContent {
        kind: Markdown,
        value: " Some doc!\n",
    },
)
